fix: homepage spacing

--- a/src/components/head/head.less
+++ b/src/components/head/head.less
@@ -18,7 +18,7 @@
 	}
 
 	.profile {
-		border-radius: 100px;
+		border-radius: 1px;
 	}
 
 	.title {
