--- a/src/components/projects/projects.less
+++ b/src/components/projects/projects.less
@@ -7,15 +7,18 @@
 
 	img {
 		width: 100%;
+		border-radius: 1px;
 	}
 
 	video {
 		width: 100%;
+		border-radius: 1px;
 	}
 
 	.title {
 		color: @text-01;
 		font-size: @fontsize-phone-medium;
+		margin-top: 5px;
 	}
 
 	.desc {
