--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -29,7 +29,7 @@
 		}
 
 		.experience-container {
-			margin-top: 30px;
+			margin-top: 20px;
 			margin-bottom: 30px;
 		}
 
